update wxeditor
